# MiniApps

./: .gitignore  CMakeLists.txt  CalculatorView.qml  Main.qml  NoteManagerView.qml  calculator.cpp  calculator.h  main.cpp  notemanager.cpp  notemanager.h
